# CreatorUIEditor

./: .gitignore  README.md  project.json
assets/Nodes/: Test1.fire  Test2.fire
assets/christmas/: home.plist
assets/dailysign/: dailysign.fire  dailysign.plist
assets/fonts/: bingo_num.fnt
assets/shop/: shop.plist  shop_item.fire  ui_icon.plist
code/: Android.mk  CMakeLists.txt
code/cpp/: CreatorReader.cpp  CreatorReader.h  Macros.h
code/cpp/ui/: PageView.h  RichtextStringVisitor.h
code/js/: jsb_cocos2dx_cccreator_auto.cpp  jsb_cocos2dx_cccreator_auto.hpp
settings/: elestorm-uieditor.json
